Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ noBtn.addEventListener("mouseover", () => {
 
 // عند الضغط على Yes
 yesBtn.addEventListener("click", () => {
-    text.innerHTML = "I know you couldn't resist 🙂‍↔️❤️🫢<br> Love you Faroooosi ❤️❤️❤️";
+    text.innerHTML = "I know you couldn't resist 🙂‍↔️❤️🫢<br> I Love you Faroooosi ❤️❤️❤️";
     
     // ستيكر لطيف متحرك
     gif.src = "https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif";
@@ -108,5 +108,6 @@ yesBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
